src/assets/scss/app.scss
* {
    box-sizing: border-box;
}

body {
    font-family: 'Inter', Arial, Helvetica, sans-serif;
    background-color: #f5f6fa;
}

// buttons
button, .button, .button-outlined {
    box-sizing: border-box;
    font-size: 1.2rem;
    padding: 8px 12px;
    margin-right: 4px;
}

button, .button, .button-outlined, .icon-button {
    cursor: pointer;
    border-radius: 4px;
    border: none;
    text-decoration: none;
}

.button {
    background-color: #17969C;
    color: #fff !important;
    font-size: 16px;
    line-height: 24px;
    letter-spacing: 0px;
    font-weight: 500;

    &[disabled] {
        background-color: #ddd;
    }

    &:hover {
        box-shadow: 2px 2px 5px 0px rgba(150, 150, 150, 0.6);
    }
}

.icon-button {
    height: 48px;
    width: 48px;
    border-radius: 50%;
    display: flex;
    text-decoration: none;
    color: #000;
    align-items: center;
    justify-content: center;

    &:hover {
        background-color: rgba(150, 150, 150, 0.2);
    }
}

.button-outlined {
    text-decoration: none;
    box-shadow: 0 0 0 1px inset grey;
    color: grey;
    display: inline-block;
    background: transparent;

    &:hover {
        box-shadow: 0 0 0 1px inset black;
        color: black;
    }
}

// select
select {
    height: 48px;
    padding: 0 12px;
    text-decoration: none;
    border: none;
    box-shadow: 0 0 0 1px inset grey;
    border-radius: 4px;
    color: grey;
    display: inline-block;
    background: transparent;
    cursor: pointer;

    &:hover {
        box-shadow: 0 0 0 1px inset black;
        color: black;
    }

    option {
        font-size: 1.2rem;
    }
}

// form
.form-group {
    width: 100%;

    input, textarea {
        width: 100%;
        margin-bottom: 8px;
        font-size: 1rem;
        padding: 8px;
        background: transparent;
        border: 1px solid #888;
        border-radius: 4px;
    }

    input {
        height: 42px;
    }
}

// progress
progress {
    width: 100%;
    height: 5px;
    appearance: none;

    &::-webkit-progress-bar {
        background: #ddd;
    }
    &::-webkit-progress-value {
        background-color: teal;
    }
}

// typography

h1, h2, h3, h4, h5, h6, p {
    color: #444;
}

h1, h2, h3 {
    font-weight: 500;
    color: #222;
    letter-spacing: -2px;
}

h1 {
    font-size: 42px;
    line-height: 42px;
}

p {
    font-weight: 300;
    font-size: 18px;
    line-height: 27px;
}

.material-icons {
    user-select: none;
}

// loaders
.center {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.loader ellipse {
    stroke-dasharray: 10, 9999;
    animation: load 2s cubic-bezier(0.8,0.25,0.25,0.9) infinite, spin 2s linear infinite;
    transform-origin: center;
}

@keyframes load {
	50% {
		stroke-dasharray: 140;
		stroke-dashoffset: 0;
		transform: rotateZ(0deg);
	}
	100% {
		stroke-dasharray: 146;
		stroke-dashoffset: -156;
	}
}

@keyframes spin {
	to {
		-webkit-transform:rotateZ(360deg);
	}
}

// boxes
.error {
    padding: 16px;
    background: #fce8e6;

    p, a {
        color: #c5221f;
    }
}

.info {
    padding: 16px;
    background: #fef7e0;

    p, a {
        color: #b05a00;
    }
}

// responsive
main {
    padding: 16px !important;
    min-height: 50vh;
}

@media screen and(min-width: 600px) {
    main {
        padding: 16px 10vw !important;
    }
}

// images
a img:hover {
    filter: brightness(0.8);
}

